test/2/parse/num-literal-double-dot-leading.err
test/2/parse/num-literal-double-dot-leading.ploy:1:1-2: parse error: unexpected token: `.`.
| .0.0
  ~
